--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,6 +14,9 @@
 		{% endblock %}
 		{% block css %}
 			<link rel="stylesheet" href={{asset("frontend/assets/css/blogStylesheet.min.css")}}>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+<link rel="stylesheet" href="https://cdn.datatables.net/1.10.25/css/jquery.dataTables.min.css">
+
 			<link rel="stylesheet" href={{asset("frontend/assets/css/bootstrap.min.css")}}>
 			<link rel="stylesheet" href={{asset("frontend/assets/css/animate.min.css")}}>
 			<link rel="stylesheet" href={{asset("frontend/assets/fonts/flaticon.css")}}>
@@ -36,6 +39,8 @@
 			<!-- Inclure jQuery en premier -->
 
 			<!-- Ensuite, inclure les autres scripts -->
+		<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script src="https://cdn.datatables.net/1.10.25/js/jquery.dataTables.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
 			<script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
@@ -426,6 +431,7 @@
 					</button>
 					<div id="validator-newsletter" class="form-result"></div>
 				</form>
+				
 			</div>
 		</div>
 	</div>
