--- a/templates/adminBase.html.twig
+++ b/templates/adminBase.html.twig
@@ -1,21 +1,22 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
-       
-        {% block stylesheets %}
-            {{ encore_entry_link_tags('app') }}
-        {% endblock %}
-        {% block css %}
-		<!-- Toastr CSS -->
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css">
+	<head>
+		<meta charset="UTF-8">
+		<title>
+			{% block title %}Welcome!
+			{% endblock %}
+		</title>
+		<link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
 
+		{% block stylesheets %}
+			{{ encore_entry_link_tags('app') }}
+		{% endblock %}
 
-
-
+		{% block css %}
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css">
 <link href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css" rel="stylesheet">
+
+			<link rel="stylesheet" href={{asset("backend/src/styles/blog_css.css")}}>
 			<link rel="stylesheet" href={{asset("backend/vendors/styles/core.css")}}>
 			<link rel="stylesheet" href={{asset("backend/vendors/styles/icon-font.min.css")}}>
 			<link rel="stylesheet" href={{asset("backend/src/plugins/datatables/css/dataTables.bootstrap4.min.css")}}>
@@ -27,18 +28,15 @@
 			
 		{% endblock %}
 		{% block js %}
-			
+		
+			<script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
+			<link rel="stylesheet" href="/error.css">
 			<script src={{asset("https://cdn.jsdelivr.net/npm/sweetalert2@11")}}></script>
 			<script src={{asset("https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js")}}></script>
 			<script src={{asset("backend/src/scripts/blog_js.js")}}></script>
 			<script src={{asset("backend/src/scripts/popper.min.js")}}></script>
 			
 			<script src={{asset("backend/vendors/scripts/core.js")}}></script>
-
-<script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
-			<link rel="stylesheet" href="/error.css">
-
-			<script src= {{asset("backend/vendors/scripts/core.js")}}></script>
 			<script src={{asset("backend/vendors/scripts/script.min.js")}}></script>
 			<script src={{asset("backend/vendors/scripts/process.js")}}></script>
 			<script src={{asset("backend/vendors/scripts/layout-settings.js")}}></script>
@@ -55,8 +53,7 @@
 			<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 			<script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/js/select2.min.js"></script>
 
-
-			<script>
+<script>
   toastr.options = {
      "closeButton": true,
     "progressBar": true,
@@ -68,7 +65,6 @@
         toastr["{{ flash.type }}"]("{{ flash.message }}");
     {% endfor %}
 </script>
-			
 		</head>
 	</html>
 </body>{% endblock %}
@@ -169,7 +165,7 @@
 								<ul>
 									<li>
 										<a href="#">
-											<img src={{asset("vendors/images/img.jpg")}} alt="" />
+											<img src="vendors/images/img.jpg" alt="" />
 											<h3>John Doe</h3>
 											<p>
 												Lorem ipsum dolor sit amet, consectetur adipisicing
@@ -179,7 +175,7 @@
 									</li>
 									<li>
 										<a href="#">
-											<img src={{asset("vendors/images/photo1.jpg")}} alt="" />
+											<img src="vendors/images/photo1.jpg" alt="" />
 											<h3>Lea R. Frith</h3>
 											<p>
 												Lorem ipsum dolor sit amet, consectetur adipisicing
@@ -189,7 +185,7 @@
 									</li>
 									<li>
 										<a href="#">
-											<img src={{asset("vendors/images/photo2.jpg")}} alt="" />
+											<img src="vendors/images/photo2.jpg" alt="" />
 											<h3>Erik L. Richards</h3>
 											<p>
 												Lorem ipsum dolor sit amet, consectetur adipisicing
@@ -199,7 +195,7 @@
 									</li>
 									<li>
 										<a href="#">
-											<img src={{asset( "vendors/images/photo3.jpg")}} alt="" />
+											<img src="vendors/images/photo3.jpg" alt="" />
 											<h3>John Doe</h3>
 											<p>
 												Lorem ipsum dolor sit amet, consectetur adipisicing
@@ -209,7 +205,7 @@
 									</li>
 									<li>
 										<a href="#">
-											<img src={{asset( "vendors/images/photo4.jpg")}} alt="" />
+											<img src="vendors/images/photo4.jpg" alt="" />
 											<h3>Renee I. Hansen</h3>
 											<p>
 												Lorem ipsum dolor sit amet, consectetur adipisicing
@@ -219,7 +215,7 @@
 									</li>
 									<li>
 										<a href="#">
-											<img src={{asset( "vendors/images/img.jpg")}} alt="" />
+											<img src="vendors/images/img.jpg" alt="" />
 											<h3>Vicki M. Coleman</h3>
 											<p>
 												Lorem ipsum dolor sit amet, consectetur adipisicing
@@ -265,7 +261,7 @@
 				</div>
 				<div class="github-link">
 					<a href="https://github.com/dropways/deskapp" target="_blank"
-						><img src={{asset( "vendors/images/github.svg")}} alt=""
+						><img src="vendors/images/github.svg" alt=""
 					/></a>
 				</div>
 			</div>
@@ -319,124 +315,29 @@
 						Log Out</a>
 				</div>
 			</div>
-			<div class="menu-block customscroll">
-				<div class="sidebar-menu">
-					<ul id="accordion-menu">
-						<li class="dropdown">
-							<a href="javascript:;" class="dropdown-toggle">
-								<span class="micon bi bi-house"></span
-								><span class="mtext">Home</span>
-							</a>
-							<ul class="submenu">
-								<li><a href="index.html">Dashboard style 1</a></li>
-							</ul>
-						</li>
-						<li class="dropdown">
-							<a href="javascript:;" class="dropdown-toggle">
-								<span class="micon bi bi-textarea-resize"></span
-								><span class="mtext">Produit</span>
-							</a>
-							<ul class="submenu">
-								<li><a href="{{ path('app_produit_indexadmin') }}">List Produit</a></li>
-								<li><a href="{{ path('app_commande_index') }}">List Commande</a></li>
-								<li><a href="{{ path('app_reclamation_indexadmin') }}">List Reclamation</a></li>
-								<li><a href="{{ path('app_panier_indexadmin') }}">List Panier</a></li>
-								<li><a href="{{ path('app_produit_new') }}">Add Produit</a></li>
-								<li><a href="{{ path('statistiques') }}">statistiques</a></li>
-								
-							</ul>
-						</li>
-						<li class="dropdown">
-							<a href="javascript:;" class="dropdown-toggle">
-								<span class="micon bi bi-table"></span
-								><span class="mtext">Tables</span>
-							</a>
-							<ul class="submenu">
-								<li><a href="basic-table.html">Basic Tables</a></li>
-								<li><a href="datatable.html">DataTables</a></li>
-							</ul>
-						</li>
-						<li>
-							<a href="calendar.html" class="dropdown-toggle no-arrow">
-								<span class="micon bi bi-calendar4-week"></span
-								><span class="mtext">Calendar</span>
-							</a>
-						</li>
-						<li class="dropdown">
-							<a href="javascript:;" class="dropdown-toggle">
-								<span class="micon bi bi-archive"></span
-								><span class="mtext"> UI Elements </span>
-							</a>
-							<ul class="submenu">
-								<li><a href="ui-buttons.html">Buttons</a></li>
-								<li><a href="ui-cards.html">Cards</a></li>
-								<li><a href="ui-cards-hover.html">Cards Hover</a></li>
-								<li><a href="ui-modals.html">Modals</a></li>
-								<li><a href="ui-tabs.html">Tabs</a></li>
-								<li>
-									<a href="ui-tooltip-popover.html">Tooltip &amp; Popover</a>
-								</li>
-								<li><a href="ui-sweet-alert.html">Sweet Alert</a></li>
-								<li><a href="ui-notification.html">Notification</a></li>
-								<li><a href="ui-timeline.html">Timeline</a></li>
-								<li><a href="ui-progressbar.html">Progressbar</a></li>
-								<li><a href="ui-typography.html">Typography</a></li>
-								<li><a href="ui-list-group.html">List group</a></li>
-								<li><a href="ui-range-slider.html">Range slider</a></li>
-								<li><a href="ui-carousel.html">Carousel</a></li>
-							</ul>
-						</li>
-						<li class="dropdown">
-							<a href="javascript:;" class="dropdown-toggle">
-								<span class="micon bi bi-command"></span
-								><span class="mtext">Icons</span>
-							</a>
-							<ul class="submenu">
-								<li><a href="bootstrap-icon.html">Bootstrap Icons</a></li>
-								<li><a href="font-awesome.html">FontAwesome Icons</a></li>
-								<li><a href="foundation.html">Foundation Icons</a></li>
-								<li><a href="ionicons.html">Ionicons Icons</a></li>
-								<li><a href="themify.html">Themify Icons</a></li>
-								<li><a href="custom-icon.html">Custom Icons</a></li>
-							</ul>
-						</li>
-						<li class="dropdown">
-							<a href="javascript:;" class="dropdown-toggle">
-								<span class="micon bi bi-pie-chart"></span
-								><span class="mtext">Charts</span>
-							</a>
-							<ul class="submenu">
-								<li><a href="highchart.html">Highchart</a></li>
-								<li><a href="knob-chart.html">jQuery Knob</a></li>
-								<li><a href="jvectormap.html">jvectormap</a></li>
-								<li><a href="apexcharts.html">Apexcharts</a></li>
-							</ul>
-						</li>
-						<li class="dropdown">
-							<a href="javascript:;" class="dropdown-toggle">
-								<span class="micon bi bi-file-earmark-text"></span
-								><span class="mtext">Additional Pages</span>
-							</a>
-							<ul class="submenu">
-								<li><a href="video-player.html">Video Player</a></li>
-								<li><a href="login.html">Login</a></li>
-								<li><a href="forgot-password.html">Forgot Password</a></li>
-								<li><a href="reset-password.html">Reset Password</a></li>
-							</ul>
-						</li>
-						<li class="dropdown">
-							<a href="javascript:;" class="dropdown-toggle">
-								<span class="micon bi bi-bug"></span
-								><span class="mtext">Error Pages</span>
-							</a>
-							<ul class="submenu">
-								<li><a href="400.html">400</a></li>
-								<li><a href="403.html">403</a></li>
-								<li><a href="404.html">404</a></li>
-								<li><a href="500.html">500</a></li>
-								<li><a href="503.html">503</a></li>
-							</ul>
-						</li>
+		</div>
+		<div class="github-link">
+			<a href="https://github.com/dropways/deskapp" target="_blank"><img src="vendors/images/github.svg" alt=""/></a>
+		</div>
+	</div>
+</div>{% endblock %}{% block body %}{% endblock %}{% block right_side_bar %}
+<div class="right-sidebar">
+	<div class="sidebar-title">
+		<h3 class="weight-600 font-16 text-blue">
+			Layout Settings
+			<span class="btn-block font-weight-400 font-12">User Interface Settings</span>
+		</h3>
+		<div class="close-sidebar" data-toggle="right-sidebar-close">
+			<i class="icon-copy ion-close-round"></i>
+		</div>
+	</div>
+	<div class="right-sidebar-body customscroll">
+		<div class="right-sidebar-body-content">
+			<h4 class="weight-600 font-18 pb-10">Header Background</h4>
+			<div class="sidebar-btn-group pb-30 mb-10">
+				<a href="javascript:void(0);" class="btn btn-outline-primary header-white active">White</a>
+				<a href="javascript:void(0);" class="btn btn-outline-primary header-dark">Dark</a>
+			</div>
 
 			<h4 class="weight-600 font-18 pb-10">Sidebar Background</h4>
 			<div class="sidebar-btn-group pb-30 mb-10">
@@ -538,7 +439,7 @@
 				<li class="dropdown">
 					<a href="javascript:;" class="dropdown-toggle">
 						<span class="micon bi bi-textarea-resize"></span>
-						<span class="mtext">Produits</span>
+						<span class="mtext">User</span>
 					</a>
 					<ul class="submenu">
 						<li>
@@ -555,6 +456,14 @@
 						
 					</ul>
 				</li>
+	
+								<li><a class="dropdown-toggle no-arrow" href="{{ path('app_produit_indexadmin') }}">List Produit</a></li>
+								<li><a class="dropdown-toggle no-arrow" href="{{ path('app_commande_index') }}">List Commande</a></li>
+								<li><a class="dropdown-toggle no-arrow" href="{{ path('app_reclamation_indexadmin') }}">List Reclamation</a></li>
+								<li><a class="dropdown-toggle no-arrow" href="{{ path('app_panier_indexadmin') }}">List Panier</a></li>
+								<li><a class="dropdown-toggle no-arrow" href="{{ path('app_produit_new') }}">Add Produit</a></li>
+								<li><a class="dropdown-toggle no-arrow" href="{{ path('statistiques') }}">statistiques</a></li>
+								
 
 				<li>
 					<a class="dropdown-toggle no-arrow" href="{{ path('app_admin_new') }}">
