--- a/templates/recettes/show.html.twig
+++ b/templates/recettes/show.html.twig
@@ -59,6 +59,8 @@
                             </a>
                         </div>
                     </div>
+
+                    <a href="{{ path('app_generate_pdf', {'idR': recette.idR}) }}" class="btn btn-primary">Generate PDF</a>
                     <div class="recipe-details-share">
                         <div class="row align-items-center">
                             <div class="col-lg-5 col-md-5">
@@ -102,6 +104,7 @@
                     </div>
                 </div>
             </div>
+
            <div class="col-lg-4">
                 <div class="side-bar-area pl-20">
                     <div class="row align-items-right">
@@ -226,6 +229,8 @@
                                 <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" id="one_star_progress"></div>
                             </div>
                         </p>
+
+                         
                     </div>
                 </div>
             </div>
