last last commit

--- a/templates/chefBase.html.twig
+++ b/templates/chefBase.html.twig
@@ -152,13 +152,13 @@
 							</a>
 							<ul class="dropdown-menu">
 								<li class="nav-item">
-									<a href="404.html" class="nav-link">
-										Mes Recettes
+	                              <a href="{{ path('app_mesRecettes_show') }}" class="nav-link">
+											Mes Recettes
 									</a>
 								</li>
 								<li class="nav-item">
-									<a href="coming-soon.html" class="nav-link">
-										Ajouter Recette
+									<a href="{{ path('app_recettes_new') }}" class="nav-link">
+										 ajouter une Recette 
 									</a>
 								</li>
 							</ul>
