--- a/templates/recettes/showChef.html.twig
+++ b/templates/recettes/showChef.html.twig
@@ -1,4 +1,4 @@
-{% extends 'base.html.twig' %}
+{% extends 'Chefbase.html.twig' %}
 
 {% block title %}Recettes{% endblock %}
 
@@ -311,5 +311,9 @@ function load_rating_data(recipeId) {
 
     
 
-   
+    <a href="{{ path('app_recettes_index') }}">back to list</a>
+
+    <a href="{{ path('app_recettes_edit', {'idR': recette.idR}) }}">edit</a>
+
+    {{ include('recettes/_delete_form.html.twig') }}
 {% endblock %}
