--- a/templates/WelcomeBase.html.twig
+++ b/templates/WelcomeBase.html.twig
@@ -145,24 +145,25 @@
 				<div class="collapse navbar-collapse mean-menu" id="navbarSupportedContent">
 					<ul class="navbar-nav m-auto">
 						<li class="nav-item">
-							<a href="#" class="nav-link active">
+							<a href="{{ path('Welcome') }}" class="nav-link active">
 								Home
 
 							</a>
 						</li>
 						<li class="nav-item">
+						
 							<a href="#" class="nav-link">
 								Recette
 								<i class="bx bx-chevron-down"></i>
 							</a>
 							<ul class="dropdown-menu">
 								<li class="nav-item">
-									<a href="404.html" class="nav-link">
+									<a href="{{ path('Welcome') }}" class="nav-link">
 										Recette Favorie
 									</a>
 								</li>
 								<li class="nav-item">
-									<a href="coming-soon.html" class="nav-link">
+									<a href="{{ path('Welcome') }}" class="nav-link">
 										Nos Chefs
 									</a>
 								</li>
@@ -175,20 +176,16 @@
 							</a>
 							<ul class="dropdown-menu">
 								<li class="nav-item">
-									<a href="shop.html" class="nav-link">Shop</a>
+									<a href="{{ path('Welcome') }}" class="nav-link">Shop</a>
 								</li>
 								<li class="nav-item">
-									<a href="cart.html" class="nav-link">Cart</a>
+									<a href="{{ path('Welcome') }}" class="nav-link">Cart</a>
 								</li>
 								<li class="nav-item">
-									<a href="checkout.html" class="nav-link">Checkout</a>
+									<a href="{{ path('Welcome') }}" class="nav-link">Checkout</a>
 								</li>
-								<li class="nav-item">
-									<a href="wishlist.html" class="nav-link">Wishlist</a>
-								</li>
-								<li class="nav-item">
-									<a href="shop-details.html" class="nav-link">Shop Details</a>
-								</li>
+							
+							
 							</ul>
 						</li>
 						<li class="nav-item">
