--- a/templates/produit/index.html.twig
+++ b/templates/produit/index.html.twig
@@ -1,5 +1,4 @@
-{% extends 'base.html.twig' %}
-
+{% extends app.user.role == 'Chef' ? 'chefbase.html.twig' : 'base.html.twig' %}
 {% block title %}Produit index
 {% endblock %}
 
