--- a/templates/recettes/showAdmin.html.twig
+++ b/templates/recettes/showAdmin.html.twig
@@ -83,10 +83,15 @@
                                               </ul>
 										</div>
 										<div>
-    <form action="{{ path('app_recettes_delete_admin', {'idR': recette.idR}) }}" method="post">
-        <input type="hidden" name="_method" value="DELETE">
-        <button class="btn btn-danger" id="reset-settings">Delete</button>
-    </form>
+    <form action="{{ path('app_recettes_delete_admin', {'idR': recette.idR}) }}" method="post" onsubmit="return confirm('Are you sure you want to delete this recipe?');">
+    <!-- Include CSRF token -->
+    <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ recette.idR) }}">
+    <!-- Specify DELETE method -->
+    <input type="hidden" name="_method" value="DELETE">
+    <!-- Submit button -->
+    <button type="submit" class="btn btn-danger" id="reset-settings">Delete</button>
+</form>
+
     
     <a href="{{ path('app_recettes_edit', {'idR': recette.idR}) }}" class="btn btn-warning">Modifier</a>
 </div>
