--- a/templates/user_nutrition/index.html.twig
+++ b/templates/user_nutrition/index.html.twig
@@ -1,4 +1,4 @@
-{% extends 'base.html.twig' %}
+{% extends app.user.role == 'Chef' ? 'chefbase.html.twig' : 'base.html.twig' %}
 {% block title %}Votre espace du nutrition {% endblock %}
 {% block body %}
     <section class="inner-banner inner-bg3">
